added code listings

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -17,7 +17,7 @@ This work centers on an algorithm known as the Unscented Kalman Filter (UKF), a 
   \label{fig:card_logo}
 \end{wrapfigure}
 
-I first took an interest in unmanned aircraft in the fall of 2012, my sophomore year of college. In search of an exciting engineering challenge, several of my friends and I founded the Cooperative Autonomous Robotics Design (CARD) team at Virginia Tech. Our core team consisted of a dozen students devoted to designing and competing with drones and other robotic vehicles. Our team, guided by my future graduate adviser, Dr.~Kevin Kochersberger, entered two design competitions and brought home two awards for the university. We were also one of four university robotics teams selected by the Smithsonian Institution to participate in the opening ceremony for Robotics Week~2015. These early experiences with the team brought me into contact with new skills such as microcontroller programming, Proportional-Integral-Derivative (PID) controller design, basic mechatronics, and computer-aided design (CAD) modeling.
+I first took an interest in unmanned aircraft in the fall of 2012, my sophomore year of college. Several of my friends and I founded the Cooperative Autonomous Robotics Design (CARD) team at Virginia Tech in order to pursue our shared interest in autonomous vehicles. Our core team consisted of a dozen students devoted to designing and competing with drones and other robotic vehicles. Our team, guided by my future graduate adviser, Dr.~Kevin Kochersberger, entered two design competitions and brought home two awards for the university. We were also one of four university robotics teams selected by the Smithsonian Institution to participate in the opening ceremony for Robotics Week~2015. These early experiences with the team brought me into contact with new skills such as microcontroller programming, Proportional-Integral-Derivative (PID) controller design, basic mechatronics, and computer-aided design (CAD) modeling.
 
 After two years of involvement with the CARD team, I applied for an internship at the National Institute of Aerospace\footnote{\url{http://www.nianet.org}} (NIA) in Hampton, Virginia. In the summer of 2014, I was part of a team of NIA researchers working on the Flying Donkey Challenge\footnote{\url{http://www.flyingdonkey.org}}, an international engineering competition centered around the idea of ``flying donkeys,'' full-sized autonomous airplanes capable of quickly carrying cargo between small airports in rural Africa. This competition, unfortunately now defunct, was divided into a number of sub-challenges focusing on different technical objectives such as precision landing and collision avoidance. Our team's goal was to design an inexpensive navigation system that could reliably guide unmanned aircraft during a Global Positioning System (GPS) blackout. This project introduced me to many of the technologies and techniques that would later become my major research interests, particularly the Robot Operating System\footnote{\url{http://wiki.ros.org}} (ROS), Kalman Filtering, and sensor fusion.
 
