--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \usepackage{array} % For fixed-length tables
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage[toc]{appendix}
 
 \linespread{1.15}
 
@@ -86,8 +87,13 @@
 \bibliographystyle{ieeetr}
 \bibliography{bibliography}
 
-%\appendix
-% http://tex.stackexchange.com/questions/49643/making-appendix-for-thesis
-%\input{Code_Listing.tex}
+\begin{appendices}
+\input{node_listing.tex}
+\input{UnscentedKf_h_listing.tex}
+\input{UnscentedKf_cpp_listing.tex}
+\input{QuadUkf_h_listing.tex}
+\input{QuadUkf_cpp_listing.tex}
+\input{CMakeLists_listing.tex}
+\end{appendices}
 
 \end{document}
