--- a/Exp_Results.tex
+++ b/Exp_Results.tex
@@ -13,28 +13,28 @@ In each trial, the UKF output showed increased ``shakiness'' in the form of larg
   \label{fig:longWalk1_xyz}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \centering
     \includegraphics[width=\textwidth]{longWalk2_xyz}
   \caption[Long Walk Trial 2]{Long Walk Trial 2 coordinate plots.}
   \label{fig:longWalk2_xyz}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \centering
     \includegraphics[width=\textwidth]{longWalk3_xyz}
   \caption[Long Walk Trial 3]{Long Walk Trial 3 coordinate plots.}
   \label{fig:longWalk3_xyz}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \centering
     \includegraphics[width=\textwidth]{longWalk4_xyz}
   \caption[Long Walk Trial 4]{Long Walk Trial 4 coordinate plots.}
   \label{fig:longWalk4_xyz}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \centering
     \includegraphics[width=\textwidth]{longWalk5_xyz}
   \caption[Long Walk Trial 5]{Long Walk Trial 5 coordinate plots.}
@@ -55,13 +55,13 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 % Box 1
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.6\textwidth]{box1_2d}
+    \includegraphics[height=0.4\textheight]{box1_2d}
   \caption[Box Pattern Trial 1 2D Trajectory]{Box Pattern Trial 1 2D Trajectory.}
   \label{fig:box1_2d}
 \end{figure}
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.7\textwidth]{box1_3d}
+    \includegraphics[height=0.4\textheight]{box1_3d}
   \caption[Box Pattern Trial 1 3D Trajectory]{Box Pattern Trial 1 3D Trajectory.}
   \label{fig:box1_3d}
 \end{figure}
@@ -70,13 +70,13 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 % Box 2
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.6\textwidth]{box2_2d}
+    \includegraphics[height=0.4\textheight]{box2_2d}
   \caption[Box Pattern Trial 2 2D Trajectory]{Box Pattern Trial 2 2D Trajectory.}
   \label{fig:box2_2d}
 \end{figure}
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.7\textwidth]{box2_3d}
+    \includegraphics[height=0.4\textheight]{box2_3d}
   \caption[Box Pattern Trial 2 3D Trajectory]{Box Pattern Trial 2 3D Trajectory.}
   \label{fig:box2_3d}
 \end{figure}
@@ -85,13 +85,13 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 % Box 3
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.6\textwidth]{box3_2d}
+    \includegraphics[height=0.4\textheight]{box3_2d}
   \caption[Box Pattern Trial 3 2D Trajectory]{Box Pattern Trial 3 2D Trajectory.}
   \label{fig:box3_2d}
 \end{figure}
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.7\textwidth]{box3_3d}
+    \includegraphics[height=0.4\textheight]{box3_3d}
   \caption[Box Pattern Trial 3 3D Trajectory]{Box Pattern Trial 3 3D Trajectory.}
   \label{fig:box3_3d}
 \end{figure}
@@ -100,13 +100,13 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 % Box 4
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.6\textwidth]{box4_2d}
+    \includegraphics[height=0.4\textheight]{box4_2d}
   \caption[Box Pattern Trial 4 2D Trajectory]{Box Pattern Trial 4 2D Trajectory.}
   \label{fig:box4_2d}
 \end{figure}
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.7\textwidth]{box4_3d}
+    \includegraphics[height=0.4\textheight]{box4_3d}
   \caption[Box Pattern Trial 4 3D Trajectory]{Box Pattern Trial 4 3D Trajectory.}
   \label{fig:box4_3d}
 \end{figure}
@@ -115,13 +115,13 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 % Box 5
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.6\textwidth]{box5_2d}
+    \includegraphics[height=0.4\textheight]{box5_2d}
   \caption[Box Pattern Trial 5 2D Trajectory]{Box Pattern Trial 5 2D Trajectory.}
   \label{fig:box5_2d}
 \end{figure}
 \begin{figure}[p]
   \centering
-    \includegraphics[height=0.7\textwidth]{box5_3d}
+    \includegraphics[height=0.4\textheight]{box5_3d}
   \caption[Box Pattern Trial 5 3D Trajectory]{Box Pattern Trial 5 3D Trajectory.}
   \label{fig:box5_3d}
 \end{figure}
