--- a/Title_Page.tex
+++ b/Title_Page.tex
@@ -1,12 +1,10 @@
 \thispagestyle{empty}
 
 \begin{center}
-\begin{doublespacing}
 {\Large 
 A Hardware-Minimal Unscented Kalman Filter Framework for Visual-Inertial Navigation of Small Unmanned Aircraft
 }
 \vfill
-\end{doublespacing}
 
 Joshua Galen Eddy
 
@@ -32,7 +30,13 @@ Craig Woolsey
 
 May 5, 2017 \\
 Blacksburg, Virginia
+
 \vfill
+
+Keywords: Unscented Kalman Filter, SLAM, State Estimation, Localization,\\
+Visual-Inertial Navigation, Unmanned Aircraft
+\\
+Copyright 2017, Joshua Galen Eddy
 \end{center}
 
 \pagebreak
